--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ authors = [
   { name="Guillaume MODARD", email="guillaumemodard@gmail.com" },
 ]
 description = "Pebble client tool for authenticate user and licence management written in Python"
-readme = "README.md"
+readme = "docs/introduction.rst"
 requires-python = ">=3.9"
 dependencies = [
     "cryptography>=41.0.5",
