--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,12 +4,12 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "pebbleauthclient"
-version = "0.1.2"
+version = "0.1.3"
 authors = [
   { name="Guillaume MODARD", email="guillaumemodard@gmail.com" },
 ]
 description = "Pebble client tool for authenticate user and licence management written in Python"
-readme = "docs/introduction.rst"
+readme = "README.rst"
 requires-python = ">=3.9"
 dependencies = [
     "cryptography>=41.0.5",
@@ -22,5 +22,5 @@ classifiers = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/pebble-solutions/pebble-auth-client-py"
-Issues = "https://github.com/pebble-solutions/pebble-auth-client-py/issues"
+Homepage = "https://pebble-solutions.github.io/pebble-auth-client-py/"
+Repository = "https://github.com/pebble-solutions/pebble-auth-client-py/"
